stylesheet/carousel.css
.woodlayer{
  position: absolute;
}


.ninetywidth{
  margin: auto;
  width: 100vw;
  /*position: absolute;*/
  top: 200px;
}

/*Carol*/

.col-md-12.nopadding{
  padding: 0;
}

.portfolio_images{
  width: 100%;
  margin: auto;
  zoom: 105%;
  overflow-x: hidden;
}

.container_relative{
  position: relative;
  width: 100vw;
}

.carousel-inner{
  width: 80%;
  margin-left: 10%;
}


.carousel-inner > .item > img, .carousel-inner > .item > a > img{
    margin:auto;
    padding: 0px;
}

